syntax = "proto3";

import "decimal.proto";

option csharp_namespace = "Ingredients.Protos";

package ingredients;

service IngredientsService {
	rpc GetToppings(GetToppingsRequest) returns (GetToppingsResponse);
	rpc DecrementToppings(DecrementToppingsRequest) returns (DecrementToppingsResponse);
	rpc GetCrusts(GetCrustsRequest) returns (GetCrustsResponse);
	rpc DecrementCrusts(DecrementCrustsRequest) returns (DecrementCrustsResponse);
}

message GetToppingsRequest {}

message GetToppingsResponse {
	repeated AvailableTopping Toppings = 1;
}

message Topping {
	string id = 1;
	string name = 2;
	customTypes.DecimalValue price = 3;
}

message AvailableTopping {
	Topping topping = 1;
	int32 quantity = 2;
}

message GetCrustsRequest {}

message GetCrustsResponse {
	repeated AvailableCrust Crusts = 1;
}

message Crust {
	string id = 1;
	string name = 2;
	customTypes.DecimalValue price = 3;
}

message AvailableCrust {
	Crust crust = 1;
	int32 quantity = 2;
}

message DecrementToppingsRequest {
	repeated string toppingIds = 1;
}

message DecrementToppingsResponse {

}

message DecrementCrustsRequest {
	repeated string crustIds = 1;
}

message DecrementCrustsResponse {

}